# image_processor

./: CMakeLists.txt  image_processor
src/: CMakeLists.txt
src/args/: args.cpp  args.h
src/filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  matrix_filter.cpp  matrix_filter.h  negative.cpp  negative.h  pixeling.cpp  pixeling.h  sharpening.cpp  sharpening.h
src/image/: color.cpp  color.h  image.cpp  image.h
src/image_format/: bmp.cpp  bmp.h  format.h
